--- a/src/app/Login/login.component.html
+++ b/src/app/Login/login.component.html
@@ -13,5 +13,7 @@
     <input id="password" type="text" formControlName="password">
   </div>
 
-  <button class="button" type="submit">Purchase</button>
+  <button class="button" type="submit">Login</button>
+
+  <div class="no_account">No account? <a routerLink="/register">Register</a></div>
 </form>
