Update login'register logic; Add mic to blob save

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<button 
+    *ngIf="!(currentUrl === '/login' || currentUrl === '/register' || currentUrl === '')"
+    (click)="logout()"
+>
+    Logout
+</button>
 <router-outlet />
