--- a/src/app/Register/register.component.html
+++ b/src/app/Register/register.component.html
@@ -11,6 +11,13 @@
   </div>
 
   <div>
+    <label for="fio">
+      Full name
+    </label>
+    <input id="fio" type="text" formControlName="fio">
+  </div>
+
+  <div>
     <label for="password">
       Password
     </label>
